--- a/src/assets/styles/components/_key-board.scss
+++ b/src/assets/styles/components/_key-board.scss
@@ -65,6 +65,10 @@
         font-size: 1rem;
         color: #888;
       }
+
+      &__ctrl {
+        font-size: 0.8rem;
+      }
     }
 
     &.first-row {
